# QuickCheck-GenT

./: QuickCheck-GenT.cabal
src/QuickCheck/: GenT.hs
src/QuickCheck/GenT/: Prelude.hs
